--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             </div>
         </div>
         <!-- ////////// -->
-        <div class="container-fluid pt-5 px-sm-5">
+        <div class="container-fluid px-sm-5">
             <div class="justify-content-between align-items-center d-flex">
                 <div class="notification_icon justify-content-center flex-column d-flex">
                     <!-- Default dropup button -->
@@ -748,13 +748,13 @@
     <section class="contact_wrapper py-4 my-3">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-lg-3 col-6">
+                <div class="col-md-3 col-lg-3 col-7">
                     <div class="contect_detail d-flex align-items-center justify-content-between">
                         <h1 class="mb-0">Contact Us</h1>
                         <i class="fa-brands fa-whatsapp fa-3x"></i>
                     </div>
                 </div>
-                <div class="col-md-3 col-lg-3 col-6 align-self-center ">
+                <div class="col-md-3 col-lg-3 col-5 align-self-center text-sm-start text-center">
                     <div class="contect_detail">
                         <h1 class="mb-0">54553421</h1>
                     </div>
@@ -775,7 +775,10 @@
     </section>
     <!-- =============================Contact Us End==============================-->
     <!-- =============================Footer Start==============================-->
-    <section class="py-5">
+    <div class="footer_top_line">
+        <hr>
+    </div>
+    <section class="py-5 footer_none">
         <div class="container">
             <div class="row gy-3">
                 <div class="col-md-3">
@@ -820,6 +823,21 @@
                 </div>
             </div>
     </section>
+    <section class="footer_block">
+        <div class="footer_block_btn">
+            <ul>
+                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">CONTACT US</a></li>
+                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">TERMS & CONDITIONS
+                        / PRIVACY POLICY</a>
+                </li>
+                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">LANGUAGE</a>
+                </li>
+            </ul>
+            <p>© 2023 <a href="#"><b>Jeddah Mazad.</b></a> All Rights Reserved</p>
+        </div>
+    </section>
+
+
     <!-- =============================Footer End==============================-->
     <!-- <script type="text/javascript" src="assets/jquery/jquery-3.7.1.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
