signin signup and createlisting

--- a/filtersearch.html
+++ b/filtersearch.html
@@ -35,6 +35,8 @@
                         <ul class="dropdown-menu drop_menu rounded-0 ms-10" aria-labelledby="navbarDropdownMenu">
                             <li><a class="dropdown-item" href="#">Profile</a></li>
                             <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="login.html">Login</a></li>
+                            <li><a class="dropdown-item" href="signup.html">Signup</a></li>
                             <li class="d-inline-flex gap-3 ps-3 w-100"><label class="form-check-label"
                                     for="flexSwitchCheckDefault">Dark
                                     Mode</label>
@@ -84,7 +86,7 @@
         <!-- ==============================Topbar End==============================-->
         <!-- ==============================Navbar Start==============================-->
         <div class="container-fluid px-0 px-lg-5">
-            <nav class="navbar navbar-expand-lg bottom_bar">
+            <nav class="navbar navbar-expand-lg bg-white bottom_bar">
                 <a href="index.html" class="navbar-brand branding ps-lg-0 ps-2">
                     <img src="assets/images/logo/logo.png" alt="logo">
                 </a>
