--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <ul class="dropdown-menu drop_menu rounded-0 ms-10" aria-labelledby="navbarDropdownMenu">
                             <li><a class="dropdown-item" href="#">Profile</a></li>
                             <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="filtersearch.html">Filter Search</a></li>
+                            <li><a class="dropdown-item" href="login.html">Login</a></li>
+                            <li><a class="dropdown-item" href="signup.html">Signup</a></li>
                             <li class="d-inline-flex gap-3 ps-3 w-100"><label class="form-check-label"
                                     for="flexSwitchCheckDefault">Dark
                                     Mode</label>
@@ -235,7 +238,7 @@
                     <div class="ml-auto d-flex gap-3">
                         <div class="navbar-nav add_post justify-content-between align-items-center d-flex">
                             <div class="nav-item">
-                                <a class="nav-link p-0  d-flex align-items-center" href="filtersearch.html"><i
+                                <a class="nav-link p-0  d-flex align-items-center" href="addpost.html"><i
                                         class="fa-solid fa-circle-plus me-1"></i>
                                     <span style="line-height: 17px;">ADD <br>
                                         POST</span></a>
