--- a/addpost.html
+++ b/addpost.html
@@ -256,7 +256,18 @@
         </div>
         <!-- ==============================Navbar End==============================-->
     </header>
-
+    <!-- ==============================Auction Card Start==============================-->
+    <section class="addpost_heading">
+        <div class="container-fluid">
+            <div class="px-md-5">
+                <h4 class="py-4">Add Post</h4>
+            </div>
+        </div>
+        <div class="addpost_content">
+            <div class="container">
+            </div>
+        </div>
+    </section>
     <!-- =============================Footer Start==============================-->
     <div class="footer_top_line">
         <hr>
@@ -309,11 +320,13 @@
     <section class="footer_block">
         <div class="footer_block_btn">
             <ul>
-                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">CONTACT US</a></li>
+                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">CONTACT US</a>
+                </li>
                 <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">TERMS &
                         CONDITIONS</a>
                 </li>
-                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">PRIVACY POLICY</a>
+                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">PRIVACY
+                        POLICY</a>
                 </li>
             </ul>
             <p>© 2023 <a href="#"><b>Jeddah Mazad.</b></a> All Rights Reserved</p>
