--- a/login.html
+++ b/login.html
@@ -195,9 +195,9 @@
                     <div class="mt-5 col-md-5 mx-auto">
                         <div class="content">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control shadow-none" id="firstname" placeholder=" "
-                                    name="firstname" required="First name">
-                                <label for="firstname">First name</label>
+                                <input type="text" class="form-control shadow-none" id="username"
+                                    placeholder="User Name" name="username" required>
+                                <label for="username">User Name</label>
                             </div>
                             <div class="form-floating mb-3 position-relative password_eye">
                                 <input type="password" class="form-control shadow-none" id="password"
