--- a/index.html
+++ b/index.html
@@ -488,6 +488,7 @@
                             class="dropdown-toggle notification_toggle d-flex align-items-center justify-content-center  rounded-circle"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <img src="assets/images/icons/notification.png" alt="notification" width="36" height="49">
+                            <span class="badge bg-danger badge-number rounded-circle">4</span>
                         </a>
                         <ul class="dropdown-menu notifications border-0 px-2">
                             <li class="dropdown-header text-center">
@@ -589,6 +590,7 @@
                             class="dropdown-toggle notification_toggle d-flex align-items-center justify-content-center  rounded-circle"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             <img src="assets/images/icons/inbox.png" alt="inbox" width="50" height="47">
+                            <span class="badge bg-danger badge-number rounded-circle">4</span>
                         </a>
                         <ul class="dropdown-menu notifications border-0 px-2">
                             <li class="dropdown-header text-center">
